Removed backface visibility clunky webkit css3 transition fix as causes issues in some use cases

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,7 +19,6 @@ body {
     width: 100%;
     min-width: 0;
   }
-  -webkit-backface-visibility:(hidden); // Fixes Chrome 1px shift rendering issue on CSS3 transitions.
 }
 
 html, body {
